package Controladores.VentaDeBoletos;

import java.util.List;

public class ControladorAsignadorButacas {
    public List<String> asignarButacas(String controladorDeConsultaSalas, String funcion) {
        /*
         * LÓGICA GRUPO B
         */
        List<String> butacas = List.of("A1", "A2", "B1", "B2"); // Ejemplo de butacas asignadas
        return butacas; // Retorna la lista de butacas asignadas
    }
}
