package Controladores.VentaDeBoletos;

public class ControladorAsignadorFuncion {
    public String asignarFuncion(String controladorCartelera) {
        /*
         * LÓGICA GRUPO A
         */
        return "funcion de ejemplo";
    }
}
