package Modelos.VentaDeBoletos;

public interface CalculadorImpuesto {
    double calcularImpuesto(double subTotal);
}
