package src.main.java.com.cinemax.moduloboletos.Controladores.VentaDeBoletos;

public class ControladorGeneradorArchivo {
}
