package com.cinemax.moduloboletos.Servicios.VentaDeBoletos;

public class ServicioCorreo {

}
