package com.cinemax.moduloboletos.Servicios.VentaDeBoletos;

public interface ServicioEnvio {

}
